--- a/Data_Preprocessing_Final.ipynb
+++ b/Data_Preprocessing_Final.ipynb
@@ -860,7 +860,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c07a5b9248fb4f53ae21cd99c6ceb000",
+       "model_id": "c5a965856e0b49c9a323dec4cd68e9a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -890,7 +890,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f73820aaa7f245969f4b4a2ce68e9cc1",
+       "model_id": "022caeae88e34cd2bf7541b48e964d65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "id": "617d8637-b6a1-48ba-be48-ab8a0f2b0b6a",
    "metadata": {},
    "outputs": [],
@@ -1529,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 42,
    "id": "b516f2f4-fdf4-4535-b14c-5bc1b28f8f11",
    "metadata": {},
    "outputs": [
@@ -1539,13 +1539,276 @@
        "((6997372, 5), (1749343, 5))"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train.shape, test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "3e84b320-4cfa-4c54-a240-ac5903c29b4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>article_id</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6638289</th>\n",
+       "      <td>314932</td>\n",
+       "      <td>34286</td>\n",
+       "      <td>20</td>\n",
+       "      <td>7</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4138690</th>\n",
+       "      <td>204002</td>\n",
+       "      <td>30423</td>\n",
+       "      <td>20</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5482876</th>\n",
+       "      <td>93154</td>\n",
+       "      <td>7361</td>\n",
+       "      <td>20</td>\n",
+       "      <td>6</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126808</th>\n",
+       "      <td>257211</td>\n",
+       "      <td>23446</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7977080</th>\n",
+       "      <td>247175</td>\n",
+       "      <td>31188</td>\n",
+       "      <td>20</td>\n",
+       "      <td>8</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3889609</th>\n",
+       "      <td>306926</td>\n",
+       "      <td>33398</td>\n",
+       "      <td>20</td>\n",
+       "      <td>5</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4960203</th>\n",
+       "      <td>281940</td>\n",
+       "      <td>34250</td>\n",
+       "      <td>20</td>\n",
+       "      <td>6</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4808138</th>\n",
+       "      <td>260303</td>\n",
+       "      <td>24033</td>\n",
+       "      <td>20</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4859707</th>\n",
+       "      <td>161875</td>\n",
+       "      <td>23879</td>\n",
+       "      <td>20</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4328568</th>\n",
+       "      <td>36530</td>\n",
+       "      <td>1495</td>\n",
+       "      <td>20</td>\n",
+       "      <td>5</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1749343 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         customer_id  article_id  year  month  day\n",
+       "6638289       314932       34286    20      7   16\n",
+       "4138690       204002       30423    20      5   20\n",
+       "5482876        93154        7361    20      6   21\n",
+       "126808        257211       23446    20      1    5\n",
+       "7977080       247175       31188    20      8   27\n",
+       "...              ...         ...   ...    ...  ...\n",
+       "3889609       306926       33398    20      5   14\n",
+       "4960203       281940       34250    20      6   10\n",
+       "4808138       260303       24033    20      6    5\n",
+       "4859707       161875       23879    20      6    7\n",
+       "4328568        36530        1495    20      5   25\n",
+       "\n",
+       "[1749343 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "ff3f4605-6039-4d92-8bb3-08f67a3e6585",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>article_id</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>263072</td>\n",
+       "      <td>32057</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>263072</td>\n",
+       "      <td>36091</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>343144</td>\n",
+       "      <td>31808</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>343144</td>\n",
+       "      <td>17165</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>343144</td>\n",
+       "      <td>13396</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   customer_id  article_id  year  month  day\n",
+       "0       263072       32057    20      1    1\n",
+       "1       263072       36091    20      1    1\n",
+       "2       343144       31808    20      1    1\n",
+       "3       343144       17165    20      1    1\n",
+       "4       343144       13396    20      1    1"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transactions.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "42f980a5-b500-45e4-a65f-4de5426bdef8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transactions.to_csv(\"data/transactions.csv\", index=False)\n",
+    "# train.to_csv(\"data/train.csv\")\n",
+    "# test.to_csv(\"data/test.csv\")"
    ]
   },
   {
@@ -1665,117 +1928,6 @@
     "test = transaction_only(test)\n",
     "train\n",
     "                        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "3e84b320-4cfa-4c54-a240-ac5903c29b4f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>article_id</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>customer_id</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>12501 15581 18521 23362 23365 34211</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>21672 21693</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3075 14561 18922 23981 24555 25417 30895 31841</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5696 6211 7912 11889 12743 12848 20348 20349 2...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>15307 30594</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>343161</th>\n",
-       "      <td>1476 4805 12728 31556 32108 33773</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>343162</th>\n",
-       "      <td>4406 20744 28659</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>343163</th>\n",
-       "      <td>6275 10853 12745 12745 12745</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>343164</th>\n",
-       "      <td>1976 5741 5741 7148 13039 23801 26075 28428 30...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>343165</th>\n",
-       "      <td>12497 21308 36760</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>338080 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                    article_id\n",
-       "customer_id                                                   \n",
-       "0                          12501 15581 18521 23362 23365 34211\n",
-       "1                                                  21672 21693\n",
-       "2               3075 14561 18922 23981 24555 25417 30895 31841\n",
-       "3            5696 6211 7912 11889 12743 12848 20348 20349 2...\n",
-       "4                                                  15307 30594\n",
-       "...                                                        ...\n",
-       "343161                       1476 4805 12728 31556 32108 33773\n",
-       "343162                                        4406 20744 28659\n",
-       "343163                            6275 10853 12745 12745 12745\n",
-       "343164       1976 5741 5741 7148 13039 23801 26075 28428 30...\n",
-       "343165                                       12497 21308 36760\n",
-       "\n",
-       "[338080 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test"
    ]
   },
   {
